// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioField/> render() should render an enabled Radio field 1`] = `
<FormGroup
  tag="fieldset"
>
  <FormGroup
    check={true}
    className="formGroup"
    key="1"
    tag="div"
  >
    <Input
      checked={false}
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      onClick={[Function]}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      foo
    </Label>
    <FormText
      className="description"
      color="muted"
      tag="small"
    >
      one of the options
    </FormText>
  </FormGroup>
  <FormGroup
    check={true}
    className="formGroup"
    key="2"
    tag="div"
  >
    <Input
      checked={true}
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      onClick={[Function]}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      bar
    </Label>
    <FormText
      className="description"
      color="muted"
      tag="small"
    >
      another option
    </FormText>
  </FormGroup>
  <FormGroup
    check={true}
    className="formGroup"
    key="3"
    tag="div"
  >
    <Input
      checked={false}
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      onClick={[Function]}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      baz
    </Label>
  </FormGroup>
</FormGroup>
`;

exports[`<RadioField/> should render a disabled Radio field 1`] = `
<FormGroup
  tag="fieldset"
>
  <FormGroup
    check={true}
    className="formGroup"
    key="1"
    tag="div"
  >
    <Input
      checked={false}
      disabled={true}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      foo
    </Label>
    <FormText
      className="description"
      color="muted"
      tag="small"
    >
      one of the options
    </FormText>
  </FormGroup>
  <FormGroup
    check={true}
    className="formGroup"
    key="2"
    tag="div"
  >
    <Input
      checked={true}
      disabled={true}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      bar
    </Label>
    <FormText
      className="description"
      color="muted"
      tag="small"
    >
      another option
    </FormText>
  </FormGroup>
  <FormGroup
    check={true}
    className="formGroup"
    key="3"
    tag="div"
  >
    <Input
      checked={false}
      disabled={true}
      type="radio"
    />
    <Label
      check={true}
      className="control-label ml-2"
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      baz
    </Label>
  </FormGroup>
</FormGroup>
`;
